Fix: z-index for map

--- a/sass/map.sass
+++ b/sass/map.sass
@@ -11,7 +11,7 @@
 
 #map-yandex 
   position: relative
-  z-index: 7
+  z-index: 3
   width: 100%
   height: 100%
   cursor: pointer
@@ -19,7 +19,6 @@
 
 .loader 
   position: absolute
-  z-index: 15
   top: -100%
   left: 0
   width: 100%
